All updated working methods
